# blueprint2-rs

./: Cargo.toml  index.html  package-lock.json
engine/: Cargo.toml
engine/src/: context.rs  engine.rs  event.rs  game.rs  lib.rs  log.rs  system.rs
engine/src/assets/: assets.rs  collection.rs  spritesheet.rs
engine/src/components/: mod.rs  sprite.rs
engine/src/engine_components/: sprite.rs
engine/src/state/: state.rs
engine/src/systems/: animation.rs  mod.rs
game/: Cargo.toml  index.html  index.js  webpack.config.js
game/src/: aisystem.rs  animator.rs  game.rs  lib.rs  main.rs
game/src/systems/: mod.rs
src/: art.rs  context.rs  draw.rs  engine.rs  event.rs  game.rs  lib.rs  log.rs  main.rs  mesh.rs  mod.rs  render.rs  sprite.rs  spritemesh.rs  texture.rs  thing.rs  timer.rs  update.rs  vertex.rs  wasm_main.rs  world.rs
src/core/: math.rs  mesh.rs  mod.rs  render.rs  sprite.rs  vertex.rs
src/core/shaders/: default.frag  default.vert
src/engine/: assets.rs  context.rs  engine.rs  entity.rs  event.rs  game.rs  gameold.rs  mesh.rs  mod.rs  rgbaimage.rs  sprite.rs  spritemesh.rs  state.rs  system.rs
src/engine/assets/: assets.rs  collection.rs  mesh.rs  mod.rs  rgbaimage.rs  spritemesh.rs  spritesheet.rs
src/engine/components/: sprite.rs
src/engine/renderer/: camera.rs  mesh.rs  mod.rs  renderer.rs  spritemesh.rs
src/shaders/: default.frag  default.vert
src/shared/: arena.rs  assets.rs  context.rs  enginelike.rs  entity.rs  event.rs  game.rs  gamelike.rs  hashid.rs  mod.rs  sprite.rs  spritesheet.rs  state.rs  thing.rs  world.rs
(+17 files in other folders)
